apps/httpbin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-ingress
  labels:
    app: httpbin
  annotations:
    konghq.com/plugins: rate-limiting, custom-plugin
    # konghq.com/host-aliases: "example.com,example.net"
    # konghq.com/methods: "GET,POST"
    # konghq.com/https-redirect-status-code: "301"
    # konghq.com/host-header: "test.example.com"
spec:
  ingressClassName: kong
  rules:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpbin-service
            port:
              number: 80
